@@ -42,16 +42,17 @@ import org.graalvm.compiler.graph.Node;
 import org.graalvm.compiler.graph.Node.NodeIntrinsic;
 import org.graalvm.compiler.graph.NodeBitMap;
 import org.graalvm.compiler.graph.NodeInputList;
-import org.graalvm.compiler.graph.NodeSourcePosition;
 import org.graalvm.compiler.nodes.AbstractEndNode;
 import org.graalvm.compiler.nodes.AbstractMergeNode;
 import org.graalvm.compiler.nodes.BeginNode;
 import org.graalvm.compiler.nodes.CallTargetNode.InvokeKind;
 import org.graalvm.compiler.nodes.ConstantNode;
+import org.graalvm.compiler.nodes.DeoptBciSupplier;
 import org.graalvm.compiler.nodes.EndNode;
 import org.graalvm.compiler.nodes.FixedGuardNode;
 import org.graalvm.compiler.nodes.FixedNode;
 import org.graalvm.compiler.nodes.FrameState;
+import org.graalvm.compiler.nodes.GraphEncoder;
 import org.graalvm.compiler.nodes.IfNode;
 import org.graalvm.compiler.nodes.Invoke;
 import org.graalvm.compiler.nodes.InvokeNode;
@@ -104,17 +105,14 @@ import org.graalvm.compiler.replacements.nodes.MacroInvokable;
 import org.graalvm.compiler.replacements.nodes.ObjectClone;
 import org.graalvm.compiler.replacements.nodes.UnaryMathIntrinsicNode;
 import org.graalvm.compiler.word.WordCastNode;
-import org.graalvm.util.GuardedAnnotationAccess;
+import com.oracle.svm.util.GuardedAnnotationAccess;
 
 import com.oracle.graal.pointsto.PointsToAnalysis;
 import com.oracle.graal.pointsto.flow.LoadFieldTypeFlow.LoadInstanceFieldTypeFlow;
 import com.oracle.graal.pointsto.flow.LoadFieldTypeFlow.LoadStaticFieldTypeFlow;
-import com.oracle.graal.pointsto.flow.OffsetLoadTypeFlow.AtomicReadTypeFlow;
 import com.oracle.graal.pointsto.flow.OffsetLoadTypeFlow.LoadIndexedTypeFlow;
 import com.oracle.graal.pointsto.flow.OffsetLoadTypeFlow.UnsafeLoadTypeFlow;
 import com.oracle.graal.pointsto.flow.OffsetLoadTypeFlow.UnsafePartitionLoadTypeFlow;
-import com.oracle.graal.pointsto.flow.OffsetStoreTypeFlow.AtomicWriteTypeFlow;
-import com.oracle.graal.pointsto.flow.OffsetStoreTypeFlow.CompareAndSwapTypeFlow;
 import com.oracle.graal.pointsto.flow.OffsetStoreTypeFlow.StoreIndexedTypeFlow;
 import com.oracle.graal.pointsto.flow.OffsetStoreTypeFlow.UnsafePartitionStoreTypeFlow;
 import com.oracle.graal.pointsto.flow.OffsetStoreTypeFlow.UnsafeStoreTypeFlow;
@@ -122,7 +120,6 @@ import com.oracle.graal.pointsto.flow.StoreFieldTypeFlow.StoreInstanceFieldTypeF
 import com.oracle.graal.pointsto.flow.StoreFieldTypeFlow.StoreStaticFieldTypeFlow;
 import com.oracle.graal.pointsto.flow.builder.TypeFlowBuilder;
 import com.oracle.graal.pointsto.flow.builder.TypeFlowGraphBuilder;
-import com.oracle.graal.pointsto.flow.context.BytecodeLocation;
 import com.oracle.graal.pointsto.meta.AnalysisField;
 import com.oracle.graal.pointsto.meta.AnalysisMethod;
 import com.oracle.graal.pointsto.meta.AnalysisType;
@@ -130,10 +127,11 @@ import com.oracle.graal.pointsto.meta.PointsToAnalysisMethod;
 import com.oracle.graal.pointsto.nodes.UnsafePartitionLoadNode;
 import com.oracle.graal.pointsto.nodes.UnsafePartitionStoreNode;
 import com.oracle.graal.pointsto.phases.InlineBeforeAnalysis;
+import com.oracle.graal.pointsto.results.StaticAnalysisResultsBuilder;
 import com.oracle.graal.pointsto.typestate.TypeState;
 
+import jdk.vm.ci.code.BytecodeFrame;
 import jdk.vm.ci.code.BytecodePosition;
-import jdk.vm.ci.common.JVMCIError;
 import jdk.vm.ci.meta.Constant;
 import jdk.vm.ci.meta.JavaConstant;
 import jdk.vm.ci.meta.JavaKind;
@@ -142,7 +140,7 @@ import jdk.vm.ci.meta.VMConstant;
 public class MethodTypeFlowBuilder {
 
     protected final PointsToAnalysis bb;
-    protected final MethodTypeFlow methodFlow;
+    protected final MethodFlowsGraph flowsGraph;
     protected final PointsToAnalysisMethod method;
     protected StructuredGraph graph;
     private NodeBitMap processedNodes;
@@ -150,10 +148,10 @@ public class MethodTypeFlowBuilder {
 
     protected final TypeFlowGraphBuilder typeFlowGraphBuilder;
 
-    public MethodTypeFlowBuilder(PointsToAnalysis bb, MethodTypeFlow methodFlow) {
+    public MethodTypeFlowBuilder(PointsToAnalysis bb, PointsToAnalysisMethod method) {
         this.bb = bb;
-        this.methodFlow = methodFlow;
-        this.method = methodFlow.getMethod();
+        this.method = method;
+        flowsGraph = new MethodFlowsGraph(method);
         typeFlowGraphBuilder = new TypeFlowGraphBuilder(bb);
     }
 
@@ -161,8 +159,8 @@ public class MethodTypeFlowBuilder {
         this.bb = bb;
         this.graph = graph;
         this.method = (PointsToAnalysisMethod) graph.method();
-        this.methodFlow = method.getTypeFlow();
-        this.typeFlowGraphBuilder = null;
+        flowsGraph = null;
+        typeFlowGraphBuilder = null;
     }
 
     @SuppressWarnings("try")
@@ -201,17 +199,6 @@ public class MethodTypeFlowBuilder {
             // Do it again after canonicalization changed type checks and field accesses.
             registerUsedElements(true);
 
-            /*
-             * When we intend to strengthen Graal graphs, then the graph needs to be preserved. Type
-             * flow nodes references Graal IR nodes directly as their source position.
-             *
-             * When we create separate StaticAnalysisResults objects, then Graal graphs are not
-             * needed after static analysis.
-             */
-            if (bb.strengthenGraalGraphs()) {
-                method.setAnalyzedGraph(graph);
-            }
-
             return true;
         } catch (Throwable ex) {
             throw graph.getDebug().handle(ex);
@@ -246,7 +233,7 @@ public class MethodTypeFlowBuilder {
                             ValueNode value = values.get(objectStartIndex + i);
                             if (!value.isJavaConstant() || !value.asJavaConstant().isDefaultForKind()) {
                                 AnalysisField field = (AnalysisField) ((VirtualInstanceNode) virtualObject).field(i);
-                                field.registerAsWritten(methodFlow);
+                                field.registerAsWritten(method);
                             }
                         }
                     }
@@ -274,12 +261,12 @@ public class MethodTypeFlowBuilder {
             } else if (n instanceof LoadFieldNode) {
                 LoadFieldNode node = (LoadFieldNode) n;
                 AnalysisField field = (AnalysisField) node.field();
-                field.registerAsRead(methodFlow);
+                field.registerAsRead(method);
 
             } else if (n instanceof StoreFieldNode) {
                 StoreFieldNode node = (StoreFieldNode) n;
                 AnalysisField field = (AnalysisField) node.field();
-                field.registerAsWritten(methodFlow);
+                field.registerAsWritten(method);
 
             } else if (n instanceof ConstantNode) {
                 ConstantNode cn = (ConstantNode) n;
@@ -321,19 +308,13 @@ public class MethodTypeFlowBuilder {
     private void registerEmbeddedRoot(ConstantNode cn) {
         JavaConstant root = cn.asJavaConstant();
         if (bb.scanningPolicy().trackConstant(bb, root)) {
-            BytecodePosition position = cn.getNodeSourcePosition();
-            if (position == null) {
-                position = new BytecodePosition(null, method, 0);
-            }
-            bb.getUniverse().registerEmbeddedRoot(root, position);
+            bb.getUniverse().registerEmbeddedRoot(root, sourcePosition(cn));
         }
     }
 
     private static void registerForeignCall(PointsToAnalysis bb, ForeignCallDescriptor foreignCallDescriptor) {
         Optional<AnalysisMethod> targetMethod = bb.getHostVM().handleForeignCall(foreignCallDescriptor, bb.getProviders().getForeignCalls());
-        targetMethod.ifPresent(analysisMethod -> {
-            bb.addRootMethod(analysisMethod);
-        });
+        targetMethod.ifPresent(analysisMethod -> bb.addRootMethod(analysisMethod, true));
     }
 
     protected void apply() {
@@ -348,13 +329,13 @@ public class MethodTypeFlowBuilder {
                  * to work with the object. So pretend that this method returns an object of the
                  * exact return type.
                  */
-                TypeFlow<?> returnTypeFlow = methodFlow.getResultFlow().getDeclaredType().getTypeFlow(this.bb, true);
+                TypeFlow<?> returnTypeFlow = flowsGraph.getReturnFlow().getDeclaredType().getTypeFlow(this.bb, true);
                 BytecodePosition source = new BytecodePosition(null, method, 0);
-                returnTypeFlow = new ProxyTypeFlow(source, returnTypeFlow);
-                FormalReturnTypeFlow resultFlow = new FormalReturnTypeFlow(source, returnType, method);
-                returnTypeFlow.addOriginalUse(this.bb, resultFlow);
-                methodFlow.addMiscEntry(returnTypeFlow);
-                methodFlow.setResult(resultFlow);
+                returnTypeFlow = bb.analysisPolicy().proxy(source, returnTypeFlow);
+                FormalReturnTypeFlow resultFlow = new FormalReturnTypeFlow(source, returnType);
+                bb.analysisPolicy().addOriginalUse(bb, returnTypeFlow, resultFlow);
+                flowsGraph.addMiscEntryFlow(returnTypeFlow);
+                flowsGraph.setReturnFlow(resultFlow);
             }
             return;
         }
@@ -378,13 +359,13 @@ public class MethodTypeFlowBuilder {
                         FormalParamTypeFlow parameter;
                         if (!isStatic && index == 0) {
                             AnalysisType paramType = method.getDeclaringClass();
-                            parameter = new FormalReceiverTypeFlow(node, paramType, method);
+                            parameter = new FormalReceiverTypeFlow(sourcePosition(node), paramType);
                         } else {
                             int offset = isStatic ? 0 : 1;
                             AnalysisType paramType = (AnalysisType) method.getSignature().getParameterType(index - offset, method.getDeclaringClass());
-                            parameter = new FormalParamTypeFlow(node, paramType, method, index);
+                            parameter = new FormalParamTypeFlow(sourcePosition(node), paramType, index);
                         }
-                        methodFlow.setParameter(index, parameter);
+                        flowsGraph.setParameter(index, parameter);
                         return parameter;
                     });
                     typeFlowGraphBuilder.checkFormalParameterBuilder(paramBuilder);
@@ -395,13 +376,11 @@ public class MethodTypeFlowBuilder {
                 }
             } else if (n instanceof BoxNode) {
                 BoxNode node = (BoxNode) n;
-                Object key = uniqueKey(node);
-                BytecodeLocation boxSite = bb.analysisPolicy().createAllocationSite(bb, key, methodFlow.getMethod());
                 AnalysisType type = (AnalysisType) StampTool.typeOrNull(node);
 
                 TypeFlowBuilder<?> boxBuilder = TypeFlowBuilder.create(bb, node, BoxTypeFlow.class, () -> {
-                    BoxTypeFlow boxFlow = new BoxTypeFlow(node, type, boxSite);
-                    methodFlow.addMiscEntry(boxFlow);
+                    BoxTypeFlow boxFlow = new BoxTypeFlow(sourcePosition(node), type);
+                    flowsGraph.addMiscEntryFlow(boxFlow);
                     return boxFlow;
                 });
                 typeFlows.add(node, boxBuilder);
@@ -420,8 +399,8 @@ public class MethodTypeFlowBuilder {
                         // do nothing
                     } else if (node.asJavaConstant().isNull()) {
                         TypeFlowBuilder<SourceTypeFlow> sourceBuilder = TypeFlowBuilder.create(bb, node, SourceTypeFlow.class, () -> {
-                            SourceTypeFlow constantSource = new SourceTypeFlow(node, TypeState.forNull());
-                            methodFlow.addMiscEntry(constantSource);
+                            SourceTypeFlow constantSource = new SourceTypeFlow(sourcePosition(node), TypeState.forNull());
+                            flowsGraph.addMiscEntryFlow(constantSource);
                             return constantSource;
                         });
                         typeFlows.add(node, sourceBuilder);
@@ -435,8 +414,8 @@ public class MethodTypeFlowBuilder {
                         AnalysisType type = (AnalysisType) StampTool.typeOrNull(node);
                         assert type.isInstantiated();
                         TypeFlowBuilder<SourceTypeFlow> sourceBuilder = TypeFlowBuilder.create(bb, node, SourceTypeFlow.class, () -> {
-                            SourceTypeFlow constantSource = new SourceTypeFlow(node, TypeState.forConstant(this.bb, node.asJavaConstant(), type));
-                            methodFlow.addMiscEntry(constantSource);
+                            SourceTypeFlow constantSource = new SourceTypeFlow(sourcePosition(node), TypeState.forConstant(this.bb, node.asJavaConstant(), type));
+                            flowsGraph.addMiscEntryFlow(constantSource);
                             return constantSource;
                         });
                         typeFlows.add(node, sourceBuilder);
@@ -464,6 +443,17 @@ public class MethodTypeFlowBuilder {
                 markFieldsUsedInComparison(compareNode.getX());
                 markFieldsUsedInComparison(compareNode.getY());
             }
+        }
+
+        /*
+         * When we intend to strengthen Graal graphs, then the graph needs to be preserved. Type
+         * flow nodes references Graal IR nodes directly as their source position.
+         *
+         * When we create separate StaticAnalysisResults objects, then Graal graphs are not needed
+         * after static analysis.
+         */
+        if (bb.strengthenGraalGraphs()) {
+            method.setAnalyzedGraph(GraphEncoder.encodeSingleGraph(graph, AnalysisParsedGraph.HOST_ARCHITECTURE, flowsGraph.getNodeFlows().getKeys()));
         }
     }
 
@@ -513,14 +503,14 @@ public class MethodTypeFlowBuilder {
                  */
                 ObjectStamp stamp = (ObjectStamp) n.stamp(NodeView.DEFAULT);
                 if (stamp.isEmpty()) {
-                    result = TypeFlowBuilder.create(bb, node, SourceTypeFlow.class, () -> new SourceTypeFlow(node, TypeState.forEmpty()));
+                    result = TypeFlowBuilder.create(bb, node, SourceTypeFlow.class, () -> new SourceTypeFlow(sourcePosition(node), TypeState.forEmpty()));
                 } else if (stamp.isExactType()) {
                     /*
                      * We are lucky: the stamp tells us which type the node has.
                      */
                     result = TypeFlowBuilder.create(bb, node, SourceTypeFlow.class, () -> {
-                        SourceTypeFlow src = new SourceTypeFlow(node, TypeState.forExactType(bb, (AnalysisType) stamp.type(), !stamp.nonNull()));
-                        methodFlow.addMiscEntry(src);
+                        SourceTypeFlow src = new SourceTypeFlow(sourcePosition(node), TypeState.forExactType(bb, (AnalysisType) stamp.type(), !stamp.nonNull()));
+                        flowsGraph.addMiscEntryFlow(src);
                         return src;
                     });
 
@@ -533,15 +523,15 @@ public class MethodTypeFlowBuilder {
 
                     if (type.isJavaLangObject()) {
                         /* Return a proxy to the all-instantiated type flow. */
-                        result = TypeFlowBuilder.create(bb, node, ProxyTypeFlow.class, () -> {
-                            ProxyTypeFlow proxy = new ProxyTypeFlow(node, bb.getAllInstantiatedTypeFlow());
-                            methodFlow.addMiscEntry(proxy);
+                        result = TypeFlowBuilder.create(bb, node, TypeFlow.class, () -> {
+                            TypeFlow<?> proxy = bb.analysisPolicy().proxy(sourcePosition(node), bb.getAllInstantiatedTypeFlow());
+                            flowsGraph.addMiscEntryFlow(proxy);
                             return proxy;
                         });
                     } else {
-                        result = TypeFlowBuilder.create(bb, node, ProxyTypeFlow.class, () -> {
-                            ProxyTypeFlow proxy = new ProxyTypeFlow(node, type.getTypeFlow(bb, true));
-                            methodFlow.addMiscEntry(proxy);
+                        result = TypeFlowBuilder.create(bb, node, TypeFlow.class, () -> {
+                            TypeFlow<?> proxy = bb.analysisPolicy().proxy(sourcePosition(node), type.getTypeFlow(bb, true));
+                            flowsGraph.addMiscEntryFlow(proxy);
                             return proxy;
                         });
                     }
@@ -585,8 +575,8 @@ public class MethodTypeFlowBuilder {
                     } else if (mergeFlow != newFlow) {
                         if (newFlow == oldFlow) {
                             newFlow = TypeFlowBuilder.create(bb, merge, MergeTypeFlow.class, () -> {
-                                MergeTypeFlow newMergeFlow = new MergeTypeFlow(merge);
-                                methodFlow.addMiscEntry(newMergeFlow);
+                                MergeTypeFlow newMergeFlow = new MergeTypeFlow(sourcePosition(merge));
+                                flowsGraph.addMiscEntryFlow(newMergeFlow);
                                 return newMergeFlow;
                             });
                             newFlow.addUseDependency(oldFlow);
@@ -631,8 +621,8 @@ public class MethodTypeFlowBuilder {
                 AnalysisType returnType = (AnalysisType) method.getSignature().getReturnType(method.getDeclaringClass());
                 if (returnType.getJavaKind() == JavaKind.Object) {
                     returnBuilder = TypeFlowBuilder.create(bb, node, FormalReturnTypeFlow.class, () -> {
-                        FormalReturnTypeFlow resultFlow = new FormalReturnTypeFlow(node, returnType, method);
-                        methodFlow.setResult(resultFlow);
+                        FormalReturnTypeFlow resultFlow = new FormalReturnTypeFlow(sourcePosition(node), returnType);
+                        flowsGraph.setReturnFlow(resultFlow);
                         return resultFlow;
                     });
                     /*
@@ -650,12 +640,11 @@ public class MethodTypeFlowBuilder {
              * This happens during method parsing, which is single threaded, so there is no need for
              * synchronization.
              */
-            Object key = uniqueKey(node);
+            Object key = StaticAnalysisResultsBuilder.uniqueKey(node);
             return instanceOfFlows.computeIfAbsent(key, (bciKey) -> {
-                BytecodeLocation location = BytecodeLocation.create(bciKey, method);
                 TypeFlowBuilder<?> instanceOfBuilder = TypeFlowBuilder.create(bb, node, InstanceOfTypeFlow.class, () -> {
-                    InstanceOfTypeFlow instanceOf = new InstanceOfTypeFlow(node, location, declaredType);
-                    methodFlow.addInstanceOf(key, instanceOf);
+                    InstanceOfTypeFlow instanceOf = new InstanceOfTypeFlow(sourcePosition(node), declaredType);
+                    flowsGraph.addInstanceOf(key, instanceOf);
                     return instanceOf;
                 });
                 /* InstanceOf must not be removed as it is reported by the analysis results. */
@@ -670,8 +659,8 @@ public class MethodTypeFlowBuilder {
                 ValueNode object = nullCheck.getValue();
                 TypeFlowBuilder<?> inputBuilder = state.lookup(object);
                 TypeFlowBuilder<?> nullCheckBuilder = TypeFlowBuilder.create(bb, source, NullCheckTypeFlow.class, () -> {
-                    NullCheckTypeFlow nullCheckFlow = new NullCheckTypeFlow(source, inputBuilder.get().getDeclaredType(), !isTrue);
-                    methodFlow.addNodeFlow(bb, source, nullCheckFlow);
+                    NullCheckTypeFlow nullCheckFlow = new NullCheckTypeFlow(sourcePosition(source), inputBuilder.get().getDeclaredType(), !isTrue);
+                    flowsGraph.addNodeFlow(bb, source, nullCheckFlow);
                     return nullCheckFlow;
                 });
                 nullCheckBuilder.addUseDependency(inputBuilder);
@@ -693,7 +682,7 @@ public class MethodTypeFlowBuilder {
                  * is unique.
                  */
                 TypeFlowBuilder<?> objectBuilder = state.lookup(object);
-                NodeSourcePosition instanceOfPosition = instanceOf.getNodeSourcePosition();
+                BytecodePosition instanceOfPosition = sourcePosition(instanceOf);
                 if (!bb.strengthenGraalGraphs() && instanceOfPosition != null && instanceOfPosition.getBCI() >= 0) {
                     /*
                      * An InstanceOf with negative BCI is not useful. This can happen for example
@@ -716,8 +705,8 @@ public class MethodTypeFlowBuilder {
                  * of objectFlow (which is context sensitive for exactly our condition).
                  */
                 TypeFlowBuilder<?> filterBuilder = TypeFlowBuilder.create(bb, source, FilterTypeFlow.class, () -> {
-                    FilterTypeFlow filterFlow = new FilterTypeFlow(source, type, typeReference.isExact(), isTrue, !isTrue ^ instanceOf.allowsNull());
-                    methodFlow.addNodeFlow(bb, source, filterFlow);
+                    FilterTypeFlow filterFlow = new FilterTypeFlow(sourcePosition(source), type, typeReference.isExact(), isTrue, !isTrue ^ instanceOf.allowsNull());
+                    flowsGraph.addNodeFlow(bb, source, filterFlow);
                     return filterFlow;
                 });
                 filterBuilder.addUseDependency(objectBuilder);
@@ -733,7 +722,10 @@ public class MethodTypeFlowBuilder {
             processedNodes.mark(n);
 
             // Note: the state is the typeFlows which was passed to the constructor.
-            if (n instanceof LoopEndNode) {
+            if (delegateNodeProcessing(n, state)) {
+                // processed by subclass
+                return;
+            } else if (n instanceof LoopEndNode) {
                 LoopEndNode end = (LoopEndNode) n;
                 LoopBeginNode merge = end.loopBegin();
                 int predIdx = merge.phiPredecessorIndex(end);
@@ -748,8 +740,8 @@ public class MethodTypeFlowBuilder {
                 for (PhiNode phi : merge.phis()) {
                     if (phi.getStackKind() == JavaKind.Object) {
                         TypeFlowBuilder<MergeTypeFlow> newFlowBuilder = TypeFlowBuilder.create(bb, merge, MergeTypeFlow.class, () -> {
-                            MergeTypeFlow newFlow = new MergeTypeFlow(merge);
-                            methodFlow.addMiscEntry(newFlow);
+                            MergeTypeFlow newFlow = new MergeTypeFlow(sourcePosition(merge));
+                            flowsGraph.addMiscEntryFlow(newFlow);
                             return newFlow;
                         });
                         newFlowBuilder.addUseDependency(state.lookup(phi));
@@ -774,10 +766,10 @@ public class MethodTypeFlowBuilder {
 
             } else if (n instanceof ExceptionObjectNode) {
                 ExceptionObjectNode node = (ExceptionObjectNode) n;
-                TypeFlowBuilder<?> exceptionObjectBuilder = TypeFlowBuilder.create(bb, node, ExceptionObjectTypeFlow.class, () -> {
+                TypeFlowBuilder<?> exceptionObjectBuilder = TypeFlowBuilder.create(bb, node, TypeFlow.class, () -> {
                     TypeFlow<?> input = ((AnalysisType) StampTool.typeOrNull(node)).getTypeFlow(bb, false);
-                    ExceptionObjectTypeFlow exceptionObjectFlow = new ExceptionObjectTypeFlow(node, input);
-                    methodFlow.addMiscEntry(exceptionObjectFlow);
+                    TypeFlow<?> exceptionObjectFlow = bb.analysisPolicy().proxy(sourcePosition(node), input);
+                    flowsGraph.addMiscEntryFlow(exceptionObjectFlow);
                     return exceptionObjectFlow;
                 });
                 state.add(node, exceptionObjectBuilder);
@@ -809,8 +801,6 @@ public class MethodTypeFlowBuilder {
                 DynamicNewInstanceNode node = (DynamicNewInstanceNode) n;
                 ValueNode instanceTypeNode = node.getInstanceType();
 
-                JVMCIError.guarantee(!instanceTypeNode.isConstant(), "DynamicNewInstanceNode.instanceType is constant, should have been canonicalized to NewInstanceNode.");
-
                 TypeFlowBuilder<?> instanceTypeBuilder;
                 AnalysisType instanceType;
                 if (instanceTypeNode instanceof GetClassNode) {
@@ -835,11 +825,9 @@ public class MethodTypeFlowBuilder {
                     });
                 }
                 AnalysisType nonNullInstanceType = Optional.ofNullable(instanceType).orElseGet(bb::getObjectType);
-                Object key = uniqueKey(node);
-                BytecodeLocation allocationLabel = bb.analysisPolicy().createAllocationSite(bb, key, method);
                 TypeFlowBuilder<DynamicNewInstanceTypeFlow> dynamicNewInstanceBuilder = TypeFlowBuilder.create(bb, node, DynamicNewInstanceTypeFlow.class, () -> {
-                    DynamicNewInstanceTypeFlow newInstanceTypeFlow = new DynamicNewInstanceTypeFlow(instanceTypeBuilder.get(), nonNullInstanceType, node, allocationLabel);
-                    methodFlow.addMiscEntry(newInstanceTypeFlow);
+                    DynamicNewInstanceTypeFlow newInstanceTypeFlow = new DynamicNewInstanceTypeFlow(sourcePosition(node), instanceTypeBuilder.get(), nonNullInstanceType);
+                    flowsGraph.addMiscEntryFlow(newInstanceTypeFlow);
                     return newInstanceTypeFlow;
                 });
 
@@ -853,9 +841,6 @@ public class MethodTypeFlowBuilder {
                 processNewArray((NewArrayNode) n, state);
             } else if (n instanceof DynamicNewArrayNode) {
                 DynamicNewArrayNode node = (DynamicNewArrayNode) n;
-                ValueNode elementType = node.getElementType();
-
-                JVMCIError.guarantee(!elementType.isConstant(), "DynamicNewArrayNode.element is constant, should have been canonicalized to NewArrayNode.");
 
                 /*
                  * Without precise type information the dynamic new array node has to generate a
@@ -866,12 +851,9 @@ public class MethodTypeFlowBuilder {
                  */
                 AnalysisType arrayType = bb.getObjectType();
 
-                Object key = uniqueKey(node);
-                BytecodeLocation allocationLabel = bb.analysisPolicy().createAllocationSite(bb, key, method);
-
                 TypeFlowBuilder<DynamicNewInstanceTypeFlow> dynamicNewArrayBuilder = TypeFlowBuilder.create(bb, node, DynamicNewInstanceTypeFlow.class, () -> {
-                    DynamicNewInstanceTypeFlow newArrayTypeFlow = new DynamicNewInstanceTypeFlow(arrayType.getTypeFlow(bb, false), arrayType, node, allocationLabel);
-                    methodFlow.addMiscEntry(newArrayTypeFlow);
+                    DynamicNewInstanceTypeFlow newArrayTypeFlow = new DynamicNewInstanceTypeFlow(sourcePosition(node), arrayType.getTypeFlow(bb, false), arrayType);
+                    flowsGraph.addMiscEntryFlow(newArrayTypeFlow);
                     return newArrayTypeFlow;
                 });
                 state.add(node, dynamicNewArrayBuilder);
@@ -881,11 +863,9 @@ public class MethodTypeFlowBuilder {
                 AnalysisType type = ((AnalysisType) node.type());
                 assert type.isInstantiated();
 
-                Object key = uniqueKey(node);
-                BytecodeLocation allocationLabel = bb.analysisPolicy().createAllocationSite(bb, key, method);
                 TypeFlowBuilder<NewInstanceTypeFlow> newArrayBuilder = TypeFlowBuilder.create(bb, node, NewInstanceTypeFlow.class, () -> {
-                    NewInstanceTypeFlow newArray = new NewInstanceTypeFlow(node, type, allocationLabel);
-                    methodFlow.addMiscEntry(newArray);
+                    NewInstanceTypeFlow newArray = new NewInstanceTypeFlow(sourcePosition(node), type);
+                    flowsGraph.addMiscEntryFlow(newArray);
                     return newArray;
                 });
 
@@ -897,18 +877,19 @@ public class MethodTypeFlowBuilder {
                 assert field.isAccessed();
                 if (node.getStackKind() == JavaKind.Object) {
                     TypeFlowBuilder<? extends LoadFieldTypeFlow> loadFieldBuilder;
+                    BytecodePosition loadLocation = sourcePosition(node);
                     if (node.isStatic()) {
                         loadFieldBuilder = TypeFlowBuilder.create(bb, node, LoadStaticFieldTypeFlow.class, () -> {
                             FieldTypeFlow fieldFlow = field.getStaticFieldFlow();
-                            LoadStaticFieldTypeFlow loadFieldFLow = new LoadStaticFieldTypeFlow(node, fieldFlow);
-                            methodFlow.addNodeFlow(bb, node, loadFieldFLow);
+                            LoadStaticFieldTypeFlow loadFieldFLow = new LoadStaticFieldTypeFlow(loadLocation, field, fieldFlow);
+                            flowsGraph.addNodeFlow(bb, node, loadFieldFLow);
                             return loadFieldFLow;
                         });
                     } else {
                         TypeFlowBuilder<?> objectBuilder = state.lookup(node.object());
                         loadFieldBuilder = TypeFlowBuilder.create(bb, node, LoadInstanceFieldTypeFlow.class, () -> {
-                            LoadInstanceFieldTypeFlow loadFieldFLow = new LoadInstanceFieldTypeFlow(node, objectBuilder.get());
-                            methodFlow.addNodeFlow(bb, node, loadFieldFLow);
+                            LoadInstanceFieldTypeFlow loadFieldFLow = new LoadInstanceFieldTypeFlow(loadLocation, field, objectBuilder.get());
+                            flowsGraph.addNodeFlow(bb, node, loadFieldFLow);
                             return loadFieldFLow;
                         });
                         loadFieldBuilder.addObserverDependency(objectBuilder);
@@ -930,8 +911,8 @@ public class MethodTypeFlowBuilder {
                     AnalysisType nonNullArrayType = Optional.ofNullable(arrayType).orElseGet(bb::getObjectArrayType);
 
                     TypeFlowBuilder<?> loadIndexedBuilder = TypeFlowBuilder.create(bb, node, LoadIndexedTypeFlow.class, () -> {
-                        LoadIndexedTypeFlow loadIndexedFlow = new LoadIndexedTypeFlow(node, nonNullArrayType, arrayBuilder.get(), methodFlow);
-                        methodFlow.addNodeFlow(bb, node, loadIndexedFlow);
+                        LoadIndexedTypeFlow loadIndexedFlow = new LoadIndexedTypeFlow(sourcePosition(node), nonNullArrayType, arrayBuilder.get());
+                        flowsGraph.addNodeFlow(bb, node, loadIndexedFlow);
                         return loadIndexedFlow;
                     });
 
@@ -961,9 +942,9 @@ public class MethodTypeFlowBuilder {
 
                 TypeFlowBuilder<?> objectBuilder = state.lookup(node.object());
                 TypeFlowBuilder<?> unsafeLoadBuilder = TypeFlowBuilder.create(bb, node, UnsafePartitionLoadTypeFlow.class, () -> {
-                    UnsafePartitionLoadTypeFlow loadTypeFlow = new UnsafePartitionLoadTypeFlow(node, objectType, componentType, objectBuilder.get(), methodFlow,
+                    UnsafePartitionLoadTypeFlow loadTypeFlow = new UnsafePartitionLoadTypeFlow(sourcePosition(node), objectType, componentType, objectBuilder.get(),
                                     node.unsafePartitionKind(), partitionType);
-                    methodFlow.addMiscEntry(loadTypeFlow);
+                    flowsGraph.addMiscEntryFlow(loadTypeFlow);
                     return loadTypeFlow;
                 });
                 unsafeLoadBuilder.addObserverDependency(objectBuilder);
@@ -992,9 +973,9 @@ public class MethodTypeFlowBuilder {
                 TypeFlowBuilder<?> valueBuilder = state.lookup(node.value());
 
                 TypeFlowBuilder<?> unsafeStoreBuilder = TypeFlowBuilder.create(bb, node, UnsafePartitionStoreTypeFlow.class, () -> {
-                    UnsafePartitionStoreTypeFlow storeTypeFlow = new UnsafePartitionStoreTypeFlow(node, objectType, componentType, objectBuilder.get(), valueBuilder.get(),
+                    UnsafePartitionStoreTypeFlow storeTypeFlow = new UnsafePartitionStoreTypeFlow(sourcePosition(node), objectType, componentType, objectBuilder.get(), valueBuilder.get(),
                                     node.partitionKind(), partitionType);
-                    methodFlow.addMiscEntry(storeTypeFlow);
+                    flowsGraph.addMiscEntryFlow(storeTypeFlow);
                     return storeTypeFlow;
                 });
                 unsafeStoreBuilder.addUseDependency(valueBuilder);
@@ -1012,14 +993,15 @@ public class MethodTypeFlowBuilder {
                     AnalysisType objectType = (AnalysisType) StampTool.typeOrNull(node.object());
                     TypeFlowBuilder<?> objectBuilder = state.lookup(node.object());
                     TypeFlowBuilder<?> loadBuilder;
+                    BytecodePosition loadLocation = sourcePosition(node);
                     if (objectType != null && objectType.isArray() && objectType.getComponentType().getJavaKind() == JavaKind.Object) {
                         /*
                          * Unsafe load from an array object is essentially an array load since we
                          * don't have separate type flows for different array elements.
                          */
                         loadBuilder = TypeFlowBuilder.create(bb, node, LoadIndexedTypeFlow.class, () -> {
-                            LoadIndexedTypeFlow loadTypeFlow = new LoadIndexedTypeFlow(node, objectType, objectBuilder.get(), methodFlow);
-                            methodFlow.addMiscEntry(loadTypeFlow);
+                            LoadIndexedTypeFlow loadTypeFlow = new LoadIndexedTypeFlow(loadLocation, objectType, objectBuilder.get());
+                            flowsGraph.addMiscEntryFlow(loadTypeFlow);
                             return loadTypeFlow;
                         });
                     } else {
@@ -1029,8 +1011,8 @@ public class MethodTypeFlowBuilder {
                          */
                         AnalysisType nonNullObjectType = bb.getObjectType();
                         loadBuilder = TypeFlowBuilder.create(bb, node, UnsafeLoadTypeFlow.class, () -> {
-                            UnsafeLoadTypeFlow loadTypeFlow = new UnsafeLoadTypeFlow(node, nonNullObjectType, nonNullObjectType, objectBuilder.get(), methodFlow);
-                            methodFlow.addMiscEntry(loadTypeFlow);
+                            UnsafeLoadTypeFlow loadTypeFlow = new UnsafeLoadTypeFlow(loadLocation, nonNullObjectType, nonNullObjectType, objectBuilder.get());
+                            flowsGraph.addMiscEntryFlow(loadTypeFlow);
                             return loadTypeFlow;
                         });
                     }
@@ -1049,14 +1031,15 @@ public class MethodTypeFlowBuilder {
                     TypeFlowBuilder<?> objectBuilder = state.lookup(node.object());
                     TypeFlowBuilder<?> valueBuilder = state.lookup(node.value());
                     TypeFlowBuilder<?> storeBuilder;
+                    BytecodePosition storeLocation = sourcePosition(node);
                     if (objectType != null && objectType.isArray() && objectType.getComponentType().getJavaKind() == JavaKind.Object) {
                         /*
                          * Unsafe store to an array object is essentially an array store since we
                          * don't have separate type flows for different array elements.
                          */
                         storeBuilder = TypeFlowBuilder.create(bb, node, StoreIndexedTypeFlow.class, () -> {
-                            StoreIndexedTypeFlow storeTypeFlow = new StoreIndexedTypeFlow(node, objectType, objectBuilder.get(), valueBuilder.get());
-                            methodFlow.addMiscEntry(storeTypeFlow);
+                            StoreIndexedTypeFlow storeTypeFlow = new StoreIndexedTypeFlow(storeLocation, objectType, objectBuilder.get(), valueBuilder.get());
+                            flowsGraph.addMiscEntryFlow(storeTypeFlow);
                             return storeTypeFlow;
                         });
                     } else {
@@ -1066,8 +1049,8 @@ public class MethodTypeFlowBuilder {
                          */
                         AnalysisType nonNullObjectType = bb.getObjectType();
                         storeBuilder = TypeFlowBuilder.create(bb, node, UnsafeStoreTypeFlow.class, () -> {
-                            UnsafeStoreTypeFlow storeTypeFlow = new UnsafeStoreTypeFlow(node, nonNullObjectType, nonNullObjectType, objectBuilder.get(), valueBuilder.get());
-                            methodFlow.addMiscEntry(storeTypeFlow);
+                            UnsafeStoreTypeFlow storeTypeFlow = new UnsafeStoreTypeFlow(storeLocation, nonNullObjectType, nonNullObjectType, objectBuilder.get(), valueBuilder.get());
+                            flowsGraph.addMiscEntryFlow(storeTypeFlow);
                             return storeTypeFlow;
                         });
                     }
@@ -1079,12 +1062,16 @@ public class MethodTypeFlowBuilder {
                 }
             } else if (n instanceof UnsafeCompareAndSwapNode) {
                 UnsafeCompareAndSwapNode node = (UnsafeCompareAndSwapNode) n;
-                checkUnsafeOffset(node.object(), node.offset());
-                if (node.object().getStackKind() == JavaKind.Object && node.newValue().getStackKind() == JavaKind.Object) {
-                    AnalysisType objectType = (AnalysisType) StampTool.typeOrNull(node.object());
-                    TypeFlowBuilder<?> objectBuilder = state.lookup(node.object());
-                    TypeFlowBuilder<?> newValueBuilder = state.lookup(node.newValue());
+                ValueNode object = node.object();
+                ValueNode newValue = node.newValue();
+
+                checkUnsafeOffset(object, node.offset());
+                if (object.getStackKind() == JavaKind.Object && newValue.getStackKind() == JavaKind.Object) {
+                    AnalysisType objectType = (AnalysisType) StampTool.typeOrNull(object);
+                    TypeFlowBuilder<?> objectBuilder = state.lookup(object);
+                    TypeFlowBuilder<?> newValueBuilder = state.lookup(newValue);
                     TypeFlowBuilder<?> storeBuilder;
+                    BytecodePosition storeLocation = sourcePosition(node);
                     if (objectType != null && objectType.isArray() && objectType.getComponentType().getJavaKind() == JavaKind.Object) {
                         /*
                          * Unsafe compare and swap is essentially unsafe store and unsafe store to
@@ -1092,8 +1079,8 @@ public class MethodTypeFlowBuilder {
                          * separate type flows for different array elements.
                          */
                         storeBuilder = TypeFlowBuilder.create(bb, node, StoreIndexedTypeFlow.class, () -> {
-                            StoreIndexedTypeFlow storeTypeFlow = new StoreIndexedTypeFlow(node, objectType, objectBuilder.get(), newValueBuilder.get());
-                            methodFlow.addMiscEntry(storeTypeFlow);
+                            StoreIndexedTypeFlow storeTypeFlow = new StoreIndexedTypeFlow(storeLocation, objectType, objectBuilder.get(), newValueBuilder.get());
+                            flowsGraph.addMiscEntryFlow(storeTypeFlow);
                             return storeTypeFlow;
                         });
                     } else {
@@ -1102,9 +1089,9 @@ public class MethodTypeFlowBuilder {
                          * object type and the swapped values type.
                          */
                         AnalysisType nonNullObjectType = bb.getObjectType();
-                        storeBuilder = TypeFlowBuilder.create(bb, node, CompareAndSwapTypeFlow.class, () -> {
-                            CompareAndSwapTypeFlow storeTypeFlow = new CompareAndSwapTypeFlow(node, nonNullObjectType, nonNullObjectType, objectBuilder.get(), newValueBuilder.get());
-                            methodFlow.addMiscEntry(storeTypeFlow);
+                        storeBuilder = TypeFlowBuilder.create(bb, node, UnsafeStoreTypeFlow.class, () -> {
+                            UnsafeStoreTypeFlow storeTypeFlow = new UnsafeStoreTypeFlow(storeLocation, nonNullObjectType, nonNullObjectType, objectBuilder.get(), newValueBuilder.get());
+                            flowsGraph.addMiscEntryFlow(storeTypeFlow);
                             return storeTypeFlow;
                         });
                     }
@@ -1137,8 +1124,8 @@ public class MethodTypeFlowBuilder {
                     AnalysisType type = (AnalysisType) StampTool.typeOrNull(node.asNode());
 
                     TypeFlowBuilder<?> arrayCopyBuilder = TypeFlowBuilder.create(bb, node, ArrayCopyTypeFlow.class, () -> {
-                        ArrayCopyTypeFlow arrayCopyFlow = new ArrayCopyTypeFlow(node.asNode(), type, srcBuilder.get(), dstBuilder.get());
-                        methodFlow.addMiscEntry(arrayCopyFlow);
+                        ArrayCopyTypeFlow arrayCopyFlow = new ArrayCopyTypeFlow(sourcePosition(node.asNode()), type, srcBuilder.get(), dstBuilder.get());
+                        flowsGraph.addMiscEntryFlow(arrayCopyFlow);
                         return arrayCopyFlow;
                     });
 
@@ -1161,10 +1148,10 @@ public class MethodTypeFlowBuilder {
                      */
                 } else {
                     /* Word-to-object: Any object can flow out from a low level memory read. */
-                    TypeFlowBuilder<?> wordToObjectBuilder = TypeFlowBuilder.create(bb, node, WordToObjectTypeFlow.class, () -> {
+                    TypeFlowBuilder<?> wordToObjectBuilder = TypeFlowBuilder.create(bb, node, TypeFlow.class, () -> {
                         /* Use the all-instantiated type flow. */
-                        WordToObjectTypeFlow objectFlow = new WordToObjectTypeFlow(node, bb.getAllInstantiatedTypeFlow());
-                        methodFlow.addMiscEntry(objectFlow);
+                        TypeFlow<?> objectFlow = bb.analysisPolicy().proxy(sourcePosition(node), bb.getAllInstantiatedTypeFlow());
+                        flowsGraph.addMiscEntryFlow(objectFlow);
                         return objectFlow;
                     });
 
@@ -1179,30 +1166,28 @@ public class MethodTypeFlowBuilder {
                                     invoke.stateAfter(), invoke.stateAfter().outerFrameState());
                     MethodCallTargetNode target = (MethodCallTargetNode) invoke.callTarget();
 
-                    processMethodInvocation(invoke.asFixedNode(), target.invokeKind(), invoke.bci(), (PointsToAnalysisMethod) target.targetMethod(), target.arguments());
+                    processMethodInvocation(state, invoke.asFixedNode(), target.invokeKind(), (PointsToAnalysisMethod) target.targetMethod(), target.arguments());
                 }
 
             } else if (n instanceof ObjectClone) {
                 ObjectClone node = (ObjectClone) n;
-                BytecodeLocation cloneLabel = bb.analysisPolicy().createAllocationSite(bb, node.bci(), methodFlow.getMethod());
                 TypeFlowBuilder<?> inputBuilder = state.lookup(node.getObject());
                 AnalysisType inputType = Optional.ofNullable((AnalysisType) StampTool.typeOrNull(node.getObject())).orElseGet(bb::getObjectType);
 
                 TypeFlowBuilder<?> cloneBuilder = TypeFlowBuilder.create(bb, node, CloneTypeFlow.class, () -> {
-                    CloneTypeFlow cloneFlow = new CloneTypeFlow(node.asNode(), inputType, cloneLabel, inputBuilder.get());
-                    methodFlow.addMiscEntry(cloneFlow);
+                    CloneTypeFlow cloneFlow = new CloneTypeFlow(sourcePosition(node.asNode()), inputType, inputBuilder.get());
+                    flowsGraph.addMiscEntryFlow(cloneFlow);
                     return cloneFlow;
                 });
                 cloneBuilder.addObserverDependency(inputBuilder);
                 state.add(node.asFixedNode(), cloneBuilder);
             } else if (n instanceof MonitorEnterNode) {
                 MonitorEnterNode node = (MonitorEnterNode) n;
-                BytecodeLocation monitorLocation = BytecodeLocation.create(uniqueKey(node), methodFlow.getMethod());
                 TypeFlowBuilder<?> objectBuilder = state.lookup(node.object());
 
                 TypeFlowBuilder<?> monitorEntryBuilder = TypeFlowBuilder.create(bb, node, MonitorEnterTypeFlow.class, () -> {
-                    MonitorEnterTypeFlow monitorEntryFlow = new MonitorEnterTypeFlow(bb, node, monitorLocation, methodFlow.getMethod());
-                    methodFlow.addMiscEntry(monitorEntryFlow);
+                    MonitorEnterTypeFlow monitorEntryFlow = new MonitorEnterTypeFlow(sourcePosition(node), bb);
+                    flowsGraph.addMiscEntryFlow(monitorEntryFlow);
                     return monitorEntryFlow;
                 });
                 monitorEntryBuilder.addUseDependency(objectBuilder);
@@ -1218,147 +1203,8 @@ public class MethodTypeFlowBuilder {
                  * above.
                  */
                 MacroInvokable node = (MacroInvokable) n;
-                processMethodInvocation(n, node.getInvokeKind(), node.bci(), (PointsToAnalysisMethod) node.getTargetMethod(), node.getArguments());
-
-            } else {
-                delegateNodeProcessing(n, state);
+                processMacroInvokable(state, node, true);
             }
-        }
-
-        private void processMethodInvocation(ValueNode invoke, InvokeKind invokeKind, int bci, PointsToAnalysisMethod targetMethod, NodeInputList<ValueNode> arguments) {
-            // check if the call is allowed
-            AnalysisMethod callerMethod = methodFlow.getMethod();
-            bb.isCallAllowed(bb, callerMethod, targetMethod, invoke.getNodeSourcePosition());
-
-            Object key = uniqueKey(invoke);
-            BytecodeLocation location = BytecodeLocation.create(key, methodFlow.getMethod());
-
-            /*
-             * Collect the parameters builders into an array so that we don't capture the `state`
-             * reference in the closure.
-             */
-            boolean targetIsStatic = Modifier.isStatic(targetMethod.getModifiers());
-
-            TypeFlowBuilder<?>[] actualParametersBuilders = new TypeFlowBuilder<?>[arguments.size()];
-            for (int i = 0; i < actualParametersBuilders.length; i++) {
-                ValueNode actualParam = arguments.get(i);
-                if (actualParam.getStackKind() == JavaKind.Object) {
-                    TypeFlowBuilder<?> paramBuilder = state.lookup(actualParam);
-                    actualParametersBuilders[i] = paramBuilder;
-                    paramBuilder.markAsBuildingAnActualParameter();
-                    if (i == 0 && !targetIsStatic) {
-                        paramBuilder.markAsBuildingAnActualReceiver();
-                    }
-                    /*
-                     * Actual parameters must not be removed. They are linked when the callee is
-                     * analyzed, hence, although they might not have any uses, cannot be removed
-                     * during parsing.
-                     */
-                    typeFlowGraphBuilder.registerSinkBuilder(paramBuilder);
-                }
-            }
-
-            TypeFlowBuilder<InvokeTypeFlow> invokeBuilder = TypeFlowBuilder.create(bb, invoke, InvokeTypeFlow.class, () -> {
-
-                TypeFlow<?>[] actualParameters = new TypeFlow<?>[actualParametersBuilders.length];
-                for (int i = 0; i < actualParameters.length; i++) {
-                    actualParameters[i] = actualParametersBuilders[i] != null ? actualParametersBuilders[i].get() : null;
-                }
-
-                /*
-                 * Initially the actual return is null. It will be set by the actual return builder
-                 * below only when the returned value is actually used, i.e., the actual return
-                 * builder is materialized.
-                 */
-                ActualReturnTypeFlow actualReturn = null;
-                /*
-                 * Get the receiver type from the invoke, it may be more precise than the method
-                 * declaring class.
-                 */
-                AnalysisType receiverType = null;
-                if (invokeKind.hasReceiver()) {
-                    receiverType = (AnalysisType) StampTool.typeOrNull(arguments.get(0));
-                    if (receiverType == null) {
-                        receiverType = targetMethod.getDeclaringClass();
-                    }
-                }
-
-                /*
-                 * The invokeLocation is used for all sorts of call stack printing (for error
-                 * messages and diagnostics), so we must have a non-null BytecodePosition.
-                 */
-                BytecodePosition invokeLocation = invoke.getNodeSourcePosition();
-                if (invokeLocation == null) {
-                    invokeLocation = new BytecodePosition(null, invoke.graph().method(), bci);
-                }
-
-                InvokeTypeFlow invokeFlow = null;
-                switch (invokeKind) {
-                    case Static:
-                        invokeFlow = new StaticInvokeTypeFlow(invokeLocation, receiverType, targetMethod, actualParameters, actualReturn, location);
-                        break;
-                    case Special:
-                        invokeFlow = bb.analysisPolicy().createSpecialInvokeTypeFlow(invokeLocation, receiverType, targetMethod, actualParameters, actualReturn, location);
-                        break;
-                    case Virtual:
-                    case Interface:
-                        invokeFlow = bb.analysisPolicy().createVirtualInvokeTypeFlow(invokeLocation, receiverType, targetMethod, actualParameters, actualReturn, location);
-                        break;
-                    default:
-                        throw shouldNotReachHere();
-                }
-
-                methodFlow.addInvoke(key, invokeFlow);
-                return invokeFlow;
-            });
-
-            if (invokeKind == InvokeKind.Special || invokeKind == InvokeKind.Virtual || invokeKind == InvokeKind.Interface) {
-                invokeBuilder.addObserverDependency(actualParametersBuilders[0]);
-            }
-
-            if (invoke.asNode().getStackKind() == JavaKind.Object) {
-                /* Create the actual return builder. */
-                AnalysisType returnType = (AnalysisType) targetMethod.getSignature().getReturnType(null);
-                TypeFlowBuilder<?> actualReturnBuilder = TypeFlowBuilder.create(bb, invoke.asNode(), ActualReturnTypeFlow.class, () -> {
-                    InvokeTypeFlow invokeFlow = invokeBuilder.get();
-                    ActualReturnTypeFlow actualReturn = new ActualReturnTypeFlow(invokeFlow.source, returnType);
-                    methodFlow.addMiscEntry(actualReturn);
-                    /*
-                     * Only set the actual return in the invoke when it is materialized, i.e., it is
-                     * used by other flows.
-                     */
-                    invokeFlow.setActualReturn(actualReturn);
-                    actualReturn.setInvokeFlow(invokeFlow);
-                    return actualReturn;
-                });
-
-                ObjectStamp stamp = (ObjectStamp) invoke.stamp(NodeView.DEFAULT);
-                if (stamp.nonNull() && !returnType.equals(stamp.type()) && returnType.isAssignableFrom(stamp.type())) {
-                    /*
-                     * If the invoke stamp has a more precise type than the return type use that to
-                     * filter the returned values. This can happen for example for MacroInvokable
-                     * nodes when more concrete stamp information can be inferred for example from
-                     * parameter types. In that case the Graal graph optimizations may decide to
-                     * remove a checkcast that would normally follow the invoke, so we need to
-                     * introduce the filter to avoid loosing precision.
-                     */
-                    TypeFlowBuilder<?> filterBuilder = TypeFlowBuilder.create(bb, invoke, FilterTypeFlow.class, () -> {
-                        FilterTypeFlow filterFlow = new FilterTypeFlow(invoke, (AnalysisType) stamp.type(), stamp.isExactType(), true, true);
-                        methodFlow.addMiscEntry(filterFlow);
-                        return filterFlow;
-                    });
-                    filterBuilder.addUseDependency(actualReturnBuilder);
-                    actualReturnBuilder = filterBuilder;
-                }
-
-                if (bb.strengthenGraalGraphs()) {
-                    typeFlowGraphBuilder.registerSinkBuilder(actualReturnBuilder);
-                }
-                state.add(invoke.asNode(), actualReturnBuilder);
-            }
-
-            /* Invokes must not be removed. */
-            typeFlowGraphBuilder.registerSinkBuilder(invokeBuilder);
         }
 
         /**
@@ -1366,16 +1212,16 @@ public class MethodTypeFlowBuilder {
          *
          * In the analysis this is used to model both {@link AtomicReadAndWriteNode}, i.e., an
          * atomic read-and-write operation like
-         * {@code sun.misc.Unsafe#getAndSetObject(Object, long, Object)}, and a
+         * {@code sun.misc.Unsafe#getAndSetObject(Object, long, Object)}, and
          * {@link UnsafeCompareAndExchangeNode}, i.e., an atomic compare-and-swap operation like
-         * jdk.internal.misc.Unsafe#compareAndExchangeObject(Object, long, Object, Object) where the
-         * result is the current value of the memory location that was compared. The
-         * jdk.internal.misc.Unsafe.compareAndExchangeObject(Object, long, Object, Object) operation
-         * is similar to the
-         * {@code sun.misc.Unsafe#compareAndSwapObject(Object, long, Object, Object)} operation.
-         * However, from the analysis stand point in both the "expected" value is ignored, but
-         * Unsafe.compareAndExchangeObject() returns the previous value, therefore it is equivalent
-         * to the model for Unsafe.getAndSetObject().
+         * {@code jdk.internal.misc.Unsafe#compareAndExchangeObject(Object, long, Object, Object)}
+         * where the result is the current value of the memory location that was compared.
+         *
+         * The Unsafe.compareAndExchangeObject() operation is similar to the
+         * Unsafe.compareAndSwapObject() operation which is modeled by the
+         * {@link UnsafeCompareAndSwapNode} above. However, Unsafe.compareAndSwapObject() returns a
+         * boolean, which the analysis ignores, whereas Unsafe.compareAndExchangeObject() returns
+         * the previous value, therefore it is equivalent to the model for Unsafe.getAndSetObject().
          */
         private void modelUnsafeReadAndWriteFlow(ValueNode node, ValueNode object, ValueNode newValue, ValueNode offset) {
             assert node instanceof UnsafeCompareAndExchangeNode || node instanceof AtomicReadAndWriteNode;
@@ -1390,6 +1236,7 @@ public class MethodTypeFlowBuilder {
                 TypeFlowBuilder<?> storeBuilder;
                 TypeFlowBuilder<?> loadBuilder;
 
+                BytecodePosition location = sourcePosition(node);
                 if (objectType != null && objectType.isArray() && objectType.getComponentType().getJavaKind() == JavaKind.Object) {
                     /*
                      * Atomic read and write is essentially unsafe store and unsafe store to an
@@ -1397,14 +1244,14 @@ public class MethodTypeFlowBuilder {
                      * flows for different array elements.
                      */
                     storeBuilder = TypeFlowBuilder.create(bb, node, StoreIndexedTypeFlow.class, () -> {
-                        StoreIndexedTypeFlow storeTypeFlow = new StoreIndexedTypeFlow(node, objectType, objectBuilder.get(), newValueBuilder.get());
-                        methodFlow.addMiscEntry(storeTypeFlow);
+                        StoreIndexedTypeFlow storeTypeFlow = new StoreIndexedTypeFlow(location, objectType, objectBuilder.get(), newValueBuilder.get());
+                        flowsGraph.addMiscEntryFlow(storeTypeFlow);
                         return storeTypeFlow;
                     });
 
                     loadBuilder = TypeFlowBuilder.create(bb, node, LoadIndexedTypeFlow.class, () -> {
-                        LoadIndexedTypeFlow loadTypeFlow = new LoadIndexedTypeFlow(node, objectType, objectBuilder.get(), methodFlow);
-                        methodFlow.addMiscEntry(loadTypeFlow);
+                        LoadIndexedTypeFlow loadTypeFlow = new LoadIndexedTypeFlow(location, objectType, objectBuilder.get());
+                        flowsGraph.addMiscEntryFlow(loadTypeFlow);
                         return loadTypeFlow;
                     });
 
@@ -1414,15 +1261,15 @@ public class MethodTypeFlowBuilder {
                      * object type and the read/written values type.
                      */
                     AnalysisType nonNullObjectType = bb.getObjectType();
-                    storeBuilder = TypeFlowBuilder.create(bb, node, AtomicWriteTypeFlow.class, () -> {
-                        AtomicWriteTypeFlow storeTypeFlow = new AtomicWriteTypeFlow(node, nonNullObjectType, nonNullObjectType, objectBuilder.get(), newValueBuilder.get());
-                        methodFlow.addMiscEntry(storeTypeFlow);
+                    storeBuilder = TypeFlowBuilder.create(bb, node, UnsafeStoreTypeFlow.class, () -> {
+                        UnsafeStoreTypeFlow storeTypeFlow = new UnsafeStoreTypeFlow(location, nonNullObjectType, nonNullObjectType, objectBuilder.get(), newValueBuilder.get());
+                        flowsGraph.addMiscEntryFlow(storeTypeFlow);
                         return storeTypeFlow;
                     });
 
-                    loadBuilder = TypeFlowBuilder.create(bb, node, AtomicReadTypeFlow.class, () -> {
-                        AtomicReadTypeFlow loadTypeFlow = new AtomicReadTypeFlow(node, nonNullObjectType, nonNullObjectType, objectBuilder.get(), methodFlow);
-                        methodFlow.addMiscEntry(loadTypeFlow);
+                    loadBuilder = TypeFlowBuilder.create(bb, node, UnsafeLoadTypeFlow.class, () -> {
+                        UnsafeLoadTypeFlow loadTypeFlow = new UnsafeLoadTypeFlow(location, nonNullObjectType, nonNullObjectType, objectBuilder.get());
+                        flowsGraph.addMiscEntryFlow(loadTypeFlow);
                         return loadTypeFlow;
                     });
 
@@ -1441,31 +1288,155 @@ public class MethodTypeFlowBuilder {
     }
 
     @SuppressWarnings("unused")
-    protected void delegateNodeProcessing(FixedNode n, TypeFlowsOfNodes state) {
+    protected boolean delegateNodeProcessing(FixedNode n, TypeFlowsOfNodes state) {
         // Hook for subclasses to do their own processing.
+        return false;
     }
 
-    /**
-     * This method returns a unique key for the given node. Unless the node comes from a
-     * substitution, the unique key is the BCI of the node. Every
-     * newinstance/newarray/newmultiarray/instanceof/checkcast node coming from a substitution
-     * method cannot have a BCI. If one substitution has multiple nodes of the same type, then the
-     * BCI would not be unique. In the later case the key is a unique object.
-     */
-    protected Object uniqueKey(Node node) {
-        if (bb.strengthenGraalGraphs()) {
-            return node;
-        }
+    protected void processMacroInvokable(TypeFlowsOfNodes state, MacroInvokable macro, boolean installResult) {
+        processMethodInvocation(state, macro.asNode(), macro.getInvokeKind(), (PointsToAnalysisMethod) macro.getTargetMethod(), macro.getArguments(), installResult);
+    }
 
-        NodeSourcePosition position = node.getNodeSourcePosition();
-        // If the 'position' has a 'caller' then it is inlined, case in which the BCI is
-        // probably not unique.
-        if (position != null && position.getCaller() == null) {
-            if (position.getBCI() >= 0) {
-                return position.getBCI();
+    protected void processMethodInvocation(TypeFlowsOfNodes state, ValueNode invoke, InvokeKind invokeKind, PointsToAnalysisMethod targetMethod, NodeInputList<ValueNode> arguments) {
+        processMethodInvocation(state, invoke, invokeKind, targetMethod, arguments, true);
+    }
+
+    protected void processMethodInvocation(TypeFlowsOfNodes state, ValueNode invoke, InvokeKind invokeKind, PointsToAnalysisMethod targetMethod, NodeInputList<ValueNode> arguments,
+                    boolean installResult) {
+        // check if the call is allowed
+        bb.isCallAllowed(bb, method, targetMethod, sourcePosition(invoke));
+
+        /*
+         * Collect the parameters builders into an array so that we don't capture the `state`
+         * reference in the closure.
+         */
+        boolean targetIsStatic = Modifier.isStatic(targetMethod.getModifiers());
+
+        TypeFlowBuilder<?>[] actualParametersBuilders = new TypeFlowBuilder<?>[arguments.size()];
+        for (int i = 0; i < actualParametersBuilders.length; i++) {
+            ValueNode actualParam = arguments.get(i);
+            if (actualParam.getStackKind() == JavaKind.Object) {
+                TypeFlowBuilder<?> paramBuilder = state.lookup(actualParam);
+                actualParametersBuilders[i] = paramBuilder;
+                paramBuilder.markAsBuildingAnActualParameter();
+                if (i == 0 && !targetIsStatic) {
+                    paramBuilder.markAsBuildingAnActualReceiver();
+                }
+                /*
+                 * Actual parameters must not be removed. They are linked when the callee is
+                 * analyzed, hence, although they might not have any uses, cannot be removed during
+                 * parsing.
+                 */
+                typeFlowGraphBuilder.registerSinkBuilder(paramBuilder);
             }
         }
-        return new Object();
+
+        TypeFlowBuilder<InvokeTypeFlow> invokeBuilder = TypeFlowBuilder.create(bb, invoke, InvokeTypeFlow.class, () -> {
+
+            TypeFlow<?>[] actualParameters = new TypeFlow<?>[actualParametersBuilders.length];
+            for (int i = 0; i < actualParameters.length; i++) {
+                actualParameters[i] = actualParametersBuilders[i] != null ? actualParametersBuilders[i].get() : null;
+            }
+
+            /*
+             * Initially the actual return is null. It will be set by the actual return builder
+             * below only when the returned value is actually used, i.e., the actual return builder
+             * is materialized.
+             */
+            ActualReturnTypeFlow actualReturn = null;
+            /*
+             * Get the receiver type from the invoke, it may be more precise than the method
+             * declaring class.
+             */
+            AnalysisType receiverType = null;
+            if (invokeKind.hasReceiver()) {
+                receiverType = (AnalysisType) StampTool.typeOrNull(arguments.get(0));
+                if (receiverType == null) {
+                    receiverType = targetMethod.getDeclaringClass();
+                }
+            }
+
+            /*
+             * The invokeLocation is used for all sorts of call stack printing (for error messages
+             * and diagnostics), so we must have a non-null BytecodePosition.
+             */
+            BytecodePosition invokeLocation = sourcePosition(invoke);
+            InvokeTypeFlow invokeFlow;
+            switch (invokeKind) {
+                case Static:
+                    invokeFlow = bb.analysisPolicy().createStaticInvokeTypeFlow(invokeLocation, receiverType, targetMethod, actualParameters, actualReturn);
+                    break;
+                case Special:
+                    invokeFlow = bb.analysisPolicy().createSpecialInvokeTypeFlow(invokeLocation, receiverType, targetMethod, actualParameters, actualReturn);
+                    break;
+                case Virtual:
+                case Interface:
+                    invokeFlow = bb.analysisPolicy().createVirtualInvokeTypeFlow(invokeLocation, receiverType, targetMethod, actualParameters, actualReturn);
+                    break;
+                default:
+                    throw shouldNotReachHere();
+            }
+
+            flowsGraph.addInvoke(StaticAnalysisResultsBuilder.uniqueKey(invoke), invokeFlow);
+            if (bb.strengthenGraalGraphs()) {
+                flowsGraph.addNodeFlow(bb, invoke, invokeFlow);
+            }
+            return invokeFlow;
+        });
+
+        if (invokeKind == InvokeKind.Special || invokeKind == InvokeKind.Virtual || invokeKind == InvokeKind.Interface) {
+            invokeBuilder.addObserverDependency(actualParametersBuilders[0]);
+        }
+
+        if (invoke.asNode().getStackKind() == JavaKind.Object) {
+            /* Create the actual return builder. */
+            AnalysisType returnType = (AnalysisType) targetMethod.getSignature().getReturnType(null);
+            TypeFlowBuilder<?> actualReturnBuilder = TypeFlowBuilder.create(bb, invoke.asNode(), ActualReturnTypeFlow.class, () -> {
+                InvokeTypeFlow invokeFlow = invokeBuilder.get();
+                ActualReturnTypeFlow actualReturn = new ActualReturnTypeFlow(invokeFlow.source, returnType);
+                flowsGraph.addMiscEntryFlow(actualReturn);
+                /*
+                 * Only set the actual return in the invoke when it is materialized, i.e., it is
+                 * used by other flows.
+                 */
+                invokeFlow.setActualReturn(bb, targetIsStatic, actualReturn);
+                actualReturn.setInvokeFlow(invokeFlow);
+                return actualReturn;
+            });
+
+            ObjectStamp stamp = (ObjectStamp) invoke.stamp(NodeView.DEFAULT);
+            if (stamp.nonNull() && !returnType.equals(stamp.type()) && returnType.isAssignableFrom(stamp.type())) {
+                /*
+                 * If the invoke stamp has a more precise type than the return type use that to
+                 * filter the returned values. This can happen for example for MacroInvokable nodes
+                 * when more concrete stamp information can be inferred for example from parameter
+                 * types. In that case the Graal graph optimizations may decide to remove a
+                 * checkcast that would normally follow the invoke, so we need to introduce the
+                 * filter to avoid loosing precision.
+                 */
+                TypeFlowBuilder<?> filterBuilder = TypeFlowBuilder.create(bb, invoke, FilterTypeFlow.class, () -> {
+                    FilterTypeFlow filterFlow = new FilterTypeFlow(sourcePosition(invoke), (AnalysisType) stamp.type(), stamp.isExactType(), true, true);
+                    flowsGraph.addMiscEntryFlow(filterFlow);
+                    return filterFlow;
+                });
+                filterBuilder.addUseDependency(actualReturnBuilder);
+                actualReturnBuilder = filterBuilder;
+            }
+
+            if (bb.strengthenGraalGraphs()) {
+                typeFlowGraphBuilder.registerSinkBuilder(actualReturnBuilder);
+            }
+            if (installResult) {
+                /*
+                 * Some MacroInvokable nodes may have an optimized result, but we still need process
+                 * to the invocation.
+                 */
+                state.add(invoke.asNode(), actualReturnBuilder);
+            }
+        }
+
+        /* Invokes must not be removed. */
+        typeFlowGraphBuilder.registerSinkBuilder(invokeBuilder);
     }
 
     protected void processCommitAllocation(CommitAllocationNode commitAllocationNode, TypeFlowsOfNodes state) {
@@ -1517,12 +1488,10 @@ public class MethodTypeFlowBuilder {
 
     protected void processNewInstance(ValueNode node, AnalysisType type, TypeFlowsOfNodes state) {
         assert type.isInstantiated();
-        Object key = uniqueKey(node);
-        BytecodeLocation allocationLabel = bb.analysisPolicy().createAllocationSite(bb, key, method);
 
         TypeFlowBuilder<?> newInstanceBuilder = TypeFlowBuilder.create(bb, node, NewInstanceTypeFlow.class, () -> {
-            NewInstanceTypeFlow newInstance = new NewInstanceTypeFlow(node, type, allocationLabel);
-            methodFlow.addMiscEntry(newInstance);
+            NewInstanceTypeFlow newInstance = new NewInstanceTypeFlow(sourcePosition(node), type);
+            flowsGraph.addMiscEntryFlow(newInstance);
             return newInstance;
         });
         state.add(node, newInstanceBuilder);
@@ -1538,19 +1507,20 @@ public class MethodTypeFlowBuilder {
             TypeFlowBuilder<?> valueBuilder = state.lookup(value);
 
             TypeFlowBuilder<StoreFieldTypeFlow> storeFieldBuilder;
+            BytecodePosition storeLocation = sourcePosition(node);
             if (field.isStatic()) {
                 storeFieldBuilder = TypeFlowBuilder.create(bb, node, StoreFieldTypeFlow.class, () -> {
                     FieldTypeFlow fieldFlow = field.getStaticFieldFlow();
-                    StoreStaticFieldTypeFlow storeFieldFlow = new StoreStaticFieldTypeFlow(node, field, valueBuilder.get(), fieldFlow);
-                    methodFlow.addMiscEntry(storeFieldFlow);
+                    StoreStaticFieldTypeFlow storeFieldFlow = new StoreStaticFieldTypeFlow(storeLocation, field, valueBuilder.get(), fieldFlow);
+                    flowsGraph.addMiscEntryFlow(storeFieldFlow);
                     return storeFieldFlow;
                 });
                 storeFieldBuilder.addUseDependency(valueBuilder);
             } else {
                 TypeFlowBuilder<?> objectBuilder = state.lookup(object);
                 storeFieldBuilder = TypeFlowBuilder.create(bb, node, StoreFieldTypeFlow.class, () -> {
-                    StoreInstanceFieldTypeFlow storeFieldFlow = new StoreInstanceFieldTypeFlow(node, field, valueBuilder.get(), objectBuilder.get());
-                    methodFlow.addMiscEntry(storeFieldFlow);
+                    StoreInstanceFieldTypeFlow storeFieldFlow = new StoreInstanceFieldTypeFlow(storeLocation, field, valueBuilder.get(), objectBuilder.get());
+                    flowsGraph.addMiscEntryFlow(storeFieldFlow);
                     return storeFieldFlow;
                 });
                 storeFieldBuilder.addUseDependency(valueBuilder);
@@ -1572,8 +1542,8 @@ public class MethodTypeFlowBuilder {
             TypeFlowBuilder<?> arrayBuilder = state.lookup(array);
             TypeFlowBuilder<?> valueBuilder = state.lookup(value);
             TypeFlowBuilder<?> storeIndexedBuilder = TypeFlowBuilder.create(bb, node, StoreIndexedTypeFlow.class, () -> {
-                StoreIndexedTypeFlow storeIndexedFlow = new StoreIndexedTypeFlow(node, nonNullArrayType, arrayBuilder.get(), valueBuilder.get());
-                methodFlow.addMiscEntry(storeIndexedFlow);
+                StoreIndexedTypeFlow storeIndexedFlow = new StoreIndexedTypeFlow(sourcePosition(node), nonNullArrayType, arrayBuilder.get(), valueBuilder.get());
+                flowsGraph.addMiscEntryFlow(storeIndexedFlow);
                 return storeIndexedFlow;
             });
             storeIndexedBuilder.addUseDependency(valueBuilder);
@@ -1586,6 +1556,26 @@ public class MethodTypeFlowBuilder {
 
     /** Hook for unsafe offset value checks. */
     protected void checkUnsafeOffset(@SuppressWarnings("unused") ValueNode base, @SuppressWarnings("unused") ValueNode offset) {
+    }
+
+    /**
+     * Provide a non-null position. Some flows like newInstance and invoke require a non-null
+     * position, for others is just better. The constructed position is best-effort, i.e., it
+     * contains at least the method, and a BCI only if the node provides it.
+     * 
+     * This is necessary because {@link Node#getNodeSourcePosition()} doesn't always provide a
+     * position, like for example for generated factory methods in FactoryThrowMethodHolder.
+     */
+    protected BytecodePosition sourcePosition(ValueNode node) {
+        BytecodePosition position = node.getNodeSourcePosition();
+        if (position == null) {
+            int bci = BytecodeFrame.UNKNOWN_BCI;
+            if (node instanceof DeoptBciSupplier) {
+                bci = ((DeoptBciSupplier) node).bci();
+            }
+            position = new BytecodePosition(null, method, bci);
+        }
+        return position;
     }
 
 }
